--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
 		"vite": "^4.4.2",
 		"vitest": "^0.32.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@fontsource-variable/oswald": "^5.0.12",
+		"@fontsource/mukta-vaani": "^5.0.8"
+	}
 }
