--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	"type": "module",
 	"dependencies": {
 		"@fontsource-variable/oswald": "^5.0.12",
-		"@fontsource/mukta-vaani": "^5.0.8"
+		"@fontsource/mukta-vaani": "^5.0.8",
+		"@vercel/analytics": "^1.1.0"
 	}
 }
